<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MakeQuizFragment">

    <TextView
        android:id="@+id/make_quiz_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/make_quiz_text"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_quiz"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/input_quiz_hint"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/make_quiz_text" />

    <TextView
        android:id="@+id/make_answer_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:text="@string/make_answer_text"
        android:textSize="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_quiz" />

    <TextView
        android:id="@+id/input_answer_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/input_answer_hint"
        android:textSize="15dp"
        app:layout_constraintStart_toStartOf="@+id/make_answer_text"
        app:layout_constraintTop_toBottomOf="@+id/make_answer_text" />

    <RadioGroup
        android:id="@+id/input_answer_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="@+id/input_answer_hint"
        app:layout_constraintTop_toBottomOf="@+id/input_answer_hint">

        <RadioButton
            android:id="@+id/answer_a"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp" />

        <RadioButton
            android:id="@+id/answer_b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp" />

        <RadioButton
            android:id="@+id/answer_c"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp" />

        <RadioButton
            android:id="@+id/answer_d"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp" />

    </RadioGroup>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="@+id/input_quiz"
        app:layout_constraintStart_toEndOf="@+id/input_answer_button"
        app:layout_constraintTop_toTopOf="@+id/input_answer_button">

        <EditText
            android:id="@+id/answer_a_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_a_hint" />

        <EditText
            android:id="@+id/answer_b_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_b_hint" />

        <EditText
            android:id="@+id/answer_c_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_c_hint" />

        <EditText
            android:id="@+id/answer_d_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/answer_d_hint" />

    </LinearLayout>

    <Button
        android:id="@+id/finish_make_quiz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/finish_make_quiz_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/continue_make_quiz_button"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/continue_make_quiz_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/continue_make_quiz_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/finish_make_quiz_button" />

</androidx.constraintlayout.widget.ConstraintLayout>